// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`BhInput.vue with object errors renders correctly 1`] = `
<div class="bh-input bh-input--has-error">
  <div class="bh-input__errors">
    <div class="bh-input__errors__item"><span>-</span>
      <div>
        <div>erro1: error message</div>
        <div>error2: error message 2</div>
      </div>
    </div>
  </div>
</div>
`;

exports[`BhInput.vue with string and object errors renders correctly 1`] = `
<div class="bh-input bh-input--has-error">
  <div class="bh-input__errors">
    <div class="bh-input__errors__item"><span>-</span> <span>string error</span></div>
    <div class="bh-input__errors__item"><span>-</span>
      <div>
        <div>erro1: error message</div>
        <div>error2: error message 2</div>
      </div>
    </div>
  </div>
</div>
`;

exports[`BhInput.vue with string errors renders correctly 1`] = `
<div class="bh-input bh-input--has-error">
  <div class="bh-input__errors">
    <div class="bh-input__errors__item"><span>-</span> <span>error 1</span></div>
  </div>
</div>
`;

exports[`BhInput.vue without errors renders correctly 1`] = `
<div class="bh-input">
  <!---->
</div>
`;

exports[`BhInput.vue without provider renders correctly 1`] = `
<div class="bh-input">
  <!---->
</div>
`;
